[package]
name = "shinichi"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
snafu.workspace = true

[dev-dependencies]
tempfile.workspace = true

[workspace]
resolver = "3"
members = ["client", "microbench", "server"]


[workspace.dependencies]
snafu = "0.8"
tempfile = "3.20"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = "0.12"
